ch4/src/pass/snapshots/ch4__pass__uniquify__tests__let_form.snap
---
source: ch4/src/pass/uniquify.rs
expression: result.to_string_pretty()

---
(let
 [x.0 (- (read))]
 (+ 2 x.0))
