ch4/src/pass/snapshots/ch4__pass__uniquify__tests__let_form_in_init_shadows.snap
---
source: ch4/src/pass/uniquify.rs
expression: result.to_string_pretty()

---
(let
 [x.1 (let [x.0 3] x.0)]
 (+ 2 x.1))
